--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Ahorcado</title>
     <link rel="stylesheet" href="styles.css">
-    
 </head>
 <body>
     <div id="game-container">
@@ -13,7 +12,10 @@
         <img id="hangman-image" src="/public/hangman-0.png" alt="Ahorcado">
         <div id="word-display"></div>
         <div id="guesses">Letras intentadas: </div>
-        <div id="letter-buttons"></div>
+        <div id="letter-buttons">
+            <div id="letter-row-1"></div>
+            <div id="letter-row-2"></div>
+        </div>
         <p id="message"></p>
     </div>
     <script src="main.js"></script>
