--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
         </div>
         <p id="message"></p>
     </div>
-    <script src="main.js"></script>
+
+    <div id="score-container">
+        <h2>Puntuaciones</h2>
+        <p id="score">Puntuación: 0</p>
+        <table id="scoresTable">
+          <thead>
+            <tr>
+              <th>Posición</th>
+              <th>Jugador</th>
+              <th>Puntuación</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+
+      <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+      <script type="module" src="js/main.js"></script>
 </body>
 </html>
